# fastapi-ipykernel-sandbox

./: .gitignore  README.md  pyproject.toml
fastapi_ipykernel_sandbox/: constants.py  main.py
fastapi_ipykernel_sandbox/models/: _base.py  kernels.py
fastapi_ipykernel_sandbox/routers/: __init__.py  kernels.py  ping.py
tests/: test_ping.py
