[tool.poetry]
name = "fastapi-ipykernel-sandbox"
version = "0.1.0"
description = ""
authors = ["Nicholas Wold <nick@nicholaswold.com>"]

[tool.poetry.scripts]
sandbox = "fastapi_ipykernel_sandbox.main:start"
migratedb = "fastapi_ipykernel_sandbox.models._base:create_tables"
cleardb = "fastapi_ipykernel_sandbox.models._base:drop_tables"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.26"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
